# 05-chat

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  _typos.toml  cliff.toml
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/fixtures/: decoding.pem  encoding.pem
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yml  test copy.rest  test.rest
chat_server/fixtures/: test.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  message.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
migrations/: 20240727150242_initial.sql  20240811024558_workspace.sql  20240816134310_triggers.sql
notify_server/: Cargo.toml  index.html  notify.yml
notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notify.rs  sse.rs
sql/: init.sql
src/: config.rs  main.rs
