[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
axum = { version = "0.7.5", features = [
  "http2",
  "query",
  "tracing",
  "multipart",
] }
anyhow = "1.0.86"
thiserror = "1.0.63"
sqlx = { version = "0.8.0", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
