[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
sqlx-db-tester = { version = "0.4.2", optional = true }
jwt-simple = { version = "0.12.9", default-features = false, features = ["pure-rust"] }
serde_json = "1.0.121"
http-body-util = "0.1.2"
[dev-dependencies]
hyper = { version = "1.4.1", features = ["full"] }
sqlx-db-tester = "0.4.2"
