[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
sqlx-db-tester = { version = "0.4.2", optional = true }
jwt-simple = { workspace = true }
serde_json = "1.0.121"
http-body-util = "0.1.2"
tower = { workspace = true }
tower-http = { workspace = true }
axum-extra = { workspace = true }
sha1 = "0.10.6"
hex = "0.4.3"
mime_guess = "2.0.5"
chat-core = { workspace = true }

[dev-dependencies]
hyper = { version = "1.4.1", features = ["full"] }
sqlx-db-tester = "0.4.2"
