[package]
name = "notify-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
futures = "0.3.30"
tokio-stream = { version = "0.1.15", features = ["sync"] }
chat-core = { workspace = true }
jwt-simple = { workspace = true }
serde_json = { workspace = true }
dashmap = "6.0.1"
